[gd_scene load_steps=8 format=3 uid="uid://bhc1lv183q4nr"]

[ext_resource type="Script" uid="uid://dlygy0xrvss1n" path="res://ui/buildings/building_menu.gd" id="1_bhq74"]
[ext_resource type="PackedScene" uid="uid://yjnjpa3w23jx" path="res://ui/common/backdrop.tscn" id="2_g4eh5"]
[ext_resource type="Texture2D" uid="uid://co6mylr4lajdt" path="res://assets/images/buzzsaw.png" id="2_p18lv"]
[ext_resource type="Texture2D" uid="uid://nh8toscaritt" path="res://third-party/henry_lazarini/I_IronBar.png" id="3_bxqt1"]
[ext_resource type="Texture2D" uid="uid://cmuo1te6vs7jk" path="res://third-party/henry_lazarini/I_Coal.png" id="4_noesg"]
[ext_resource type="Texture2D" uid="uid://dtvctdaw8ikps" path="res://ui/icons/hammer-icon.tres" id="6_4j3a5"]
[ext_resource type="PackedScene" uid="uid://c6bpddw43d5e4" path="res://ui/buildings/building_needs_panel/building_needs_panel.tscn" id="7_j64fh"]

[node name="BuildingMenu" type="Control" groups=["blocking"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhq74")

[node name="Backdrop" parent="." instance=ExtResource("2_g4eh5")]
layout_mode = 1

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginAllSmall"

[node name="P" type="PanelContainer" parent="M"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="M/P"]
layout_mode = 2
theme_type_variation = &"MarginAllSmall"

[node name="V" type="VBoxContainer" parent="M/P/M"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="M/P/M/V"]
layout_mode = 2

[node name="Heading" type="Label" parent="M/P/M/V/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buildings"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="M/P/M/V/Header"]
layout_mode = 2
text = "X"

[node name="H" type="HBoxContainer" parent="M/P/M/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="M/P/M/V/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_text_lines = 2
text_overrun_behavior = 0
item_count = 4
max_columns = 6
fixed_column_width = 68
icon_mode = 0
fixed_icon_size = Vector2i(32, 32)
item_0/text = "Smelter"
item_0/icon = ExtResource("2_p18lv")
item_1/text = "Sawmill"
item_1/icon = ExtResource("2_p18lv")
item_2/text = "Forge"
item_2/icon = ExtResource("3_bxqt1")
item_3/text = "Charcoal Kiln"
item_3/icon = ExtResource("4_noesg")

[node name="BuildingNeeds" parent="M/P/M/V/H" instance=ExtResource("7_j64fh")]
custom_minimum_size = Vector2(148, 0)
layout_mode = 2

[node name="M" type="MarginContainer" parent="M/P/M/V"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="BuildButton" type="Button" parent="M/P/M/V/M"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Build"
icon = ExtResource("6_4j3a5")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="M/P/M/V/Header/CloseButton" to="." method="close_menu"]
[connection signal="item_activated" from="M/P/M/V/H/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="item_selected" from="M/P/M/V/H/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="M/P/M/V/M/BuildButton" to="." method="_on_build_button_pressed"]
